# fullstack-project

backend/: .env  crud.py  database.py  main.py  models.py  pyproject.toml  routes.py  schemas.py
frontend/products-frontend/: index.html  package-lock.json  package.json
frontend/products-frontend/src/: ActionButton.jsx  Alert.jsx  Alert.module.css  App.jsx  BatchingCounter.jsx  Button.jsx  CandidateProfile.jsx  CardWrapper.jsx  Contact.jsx  Counter.jsx  CustomButton.jsx  Greeting.jsx  HelloWorld.jsx  LoginCard.jsx  Menu.jsx  MenuItem.jsx  NameList.jsx  NewUserCard.jsx  NewsLetter.jsx  PrevStateCounter.jsx  Product.jsx  ProductList.jsx  ShoppingCart.jsx  SimpleCounter.jsx  StyledForm.jsx  ToDoList.jsx  UserCard.jsx  UserDashboard.jsx  UserDetails.jsx  UserInfo.jsx  UserProfile.jsx  Welcome.jsx
