[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "rafaeln2",email = "rafaeln_nascimento@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
