[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["rafaeln2 <rafaeln_nascimento@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
pydantic = "^2.12.5"
sqlalchemy = "^2.0"
fastapi = "^0.128"
psycopg2-binary = "^2.9.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
